Closed Bug 183887 Opened 22 years ago Closed 22 years ago

Text alignment feedback is incorrect inside other styles (in CSS mode)

Categories

(SeaMonkey :: Composer, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jmt, Assigned: glazou)

Details

(Whiteboard: EDITORBASE)

Attachments

(1 file)

Create a paragraph of text with a non-default (left) alignment, and apply some
style (bold, italic, color, size, whatever) to some subset of the text. When the
cursor is inside this text, the UI feedback for the text-alignment (the button
in the toolbar) is incorrect (it revert back to the default value of left).

This problem is 'deep' in that the value coming out of the command object is
wrong: I know this becuase we have our own UI for the editor in our editing
application, with copies of pokeMultiStyleUI (or whatever it's called), and the
'state' values that get sent to the JS code are definitely wrong. So as a wild
guess, nsAlignCommand is computing the worng value.

I'll attach a test case in a second.
glargl ! confirming. taking. plussing (this happens in CSS mode).
Status: NEW → ASSIGNED
Keywords: nsbeta1
Whiteboard: EDITORBASE
Attached patch patch take #1Splinter Review
This should go in 1.3a.
Comment on attachment 108485 [details] [diff] [review]
patch take #1

Joe, can you r= please ?
Peter, can you sr= please ?

Thanks.
Attachment #108485 - Flags: superreview?(peterv)
Attachment #108485 - Flags: review?(jfrancis)
Just to confirm, applying this patch (to our 1.2 branch, but it applied cleanly)
fixes this problem for us. Many thanks Daniel! Oh, and the patch looks fine to
me too, if you'll consider that 1/2 of a review :-)
Comment on attachment 108485 [details] [diff] [review]
patch take #1

>+  if (!blockParent) return NS_ERROR_FAILURE;

This return should be on its own line. Apparently it's the style in these files
so I won't let this block my sr but that style should be changed some day.
Attachment #108485 - Flags: superreview?(peterv) → superreview+
Attachment #108485 - Flags: review?(jfrancis) → review+
checked in trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: