Text alignment feedback erroneous in Composer; b=183887, r=jfrancis, sr=peterv